--- a/projet.css
+++ b/projet.css
@@ -65,5 +65,15 @@ background-color :rgba(3, 3, 3, 0.616) ;
     font-family :Segoe UI ; 
   }
   .h  { 
-    background : linear-gradient(to right ,)}
+    background : linear-gradient(to right ,b) ;
+width : 100%;
+height: 2px ;
+border : 0 none ;
+margin-right : auto;
+margin-left : auto;
+margin-top : 20px;
+margin-bottom : 90 px; 
+background-color : rgb(134, 131, 131) ;}
+
+.first { width: 600%;}
 
