--- a/projet.css
+++ b/projet.css
@@ -75,5 +75,96 @@ margin-top : 20px;
 margin-bottom : 20 px; 
 background-color : rgb(209, 207, 207) ;}
 
+.first {  margin-left :25px;
+  margin-right : 15px ; }
+.second{  margin-left :25px;
+  margin-right : 15px ; }
+
+.word { color : white;
+  position : absolute ;
+  top : 125% ;
+  right :87.5% ;
+  width : 10% ;
+  text-align  : top  ;
+  font-size : 20px ;
+  background-color :rgb(3, 3, 3) ;
+  height :25px;
+  }
+
+  .wordd { color : white;
+    position : absolute ;
+    top : 125% ;
+    right :64.2% ;
+    width : 10% ;
+    text-align  : top  ;
+    font-size : 20px ;
+    background-color :rgb(3, 3, 3) ;
+    height :25px;
+    }
+
+    .worddd { color : white;
+      position : absolute ;
+      top : 125% ;
+      right :41% ;
+      width : 10% ;
+      text-align  : top  ;
+      font-size : 20px ;
+      background-color :rgb(3, 3, 3) ;
+      height :25px;
+      }
+
+      .wordddd { color : white;
+        position : absolute ;
+        top : 125% ;
+        right :17.7% ;
+        width : 10% ;
+        text-align  : top  ;
+        font-size : 20px ;
+        background-color :rgb(3, 3, 3) ;
+        height :25px;
+        }
+.word1 { color : white;
+  position : absolute ;
+  top : 156% ;
+  right :87.5% ;
+  width : 10% ;
+  text-align  : top  ;
+  font-size : 20px ;
+  background-color :rgb(3, 3, 3) ;
+  height :25px;
+  }
+  .word2 { color : white;
+    position : absolute ;
+    top : 156% ;
+    right :64.2% ;
+    width : 10% ;
+    text-align  : top  ;
+    font-size : 20px ;
+    background-color :rgb(3, 3, 3) ;
+    height :25px;
+    }
+
+    .word3 { color : white;
+      position : absolute ;
+      top : 156% ;
+      right :41% ;
+      width : 10% ;
+      text-align  : top  ;
+      font-size : 20px ;
+      background-color :rgb(3, 3, 3) ;
+      height :25px;
+      }
+      .word4 { color : white;
+        position : absolute ;
+        top : 156% ;
+        right :17.7% ;
+        width : 10% ;
+        text-align  : top  ;
+        font-size : 20px ;
+        background-color :rgb(3, 3, 3) ;
+        height :25px;
+        }
+      
+
 
 
