--- a/projet.css
+++ b/projet.css
@@ -1,21 +1,23 @@
 .logo{
-  position : absolute ;
-  top : 1% ;
-  right : 68% ;
-  width : 30% ;
-  text-align :left ;
+  width: 30%;
+  height: 100 vh ;
+  /*border: 25px solid rgb(231, 115, 5); */
+  float:left ;
+  font-size: 2em ;
+  
 }
 
 .same {
-   width: 40%;
-  float : right ;
-list-style : none ;
-margin-top : 30 px ; 
- }
+  width:60%;
+  /*border: 15px solid green; */
+  /*padding:25px; */
+  margin: auto;
+  float: left ;
+}
 
 .same li {
-  display : inline-block ;
-   }
+  display:inline;
+}
 
 
 .same li a {
@@ -58,10 +60,11 @@ background-color :rgba(3, 3, 3, 0.616) ;
     }
  
   .project  { 
-    position : absolute ;
-    right : 68% ;
-    width : 30% ;
-    text-align :left ;
+   
+  float : right ;
+  right : 20px ;
+    width : 100% ;
+    text-align :right ;
     font-family :Segoe UI ; 
   }
   .h  { 
@@ -165,6 +168,10 @@ background-color : rgb(209, 207, 207) ;}
         height :25px;
         }
       
-
+.lorem {right: 20px;
+  width: 98%;
+  float : right ;
+list-style : none ;
+margin-top : 30 px}
 
 
