--- a/projet.css
+++ b/projet.css
@@ -15,23 +15,15 @@
   float: left ;
 }
 
-.same li {
-  display:inline;
-}
+.same ul  {
+  display : inline-flex ;
+  list-style : none ;
+  color : #fff ;}
 
+  .same ul li {width : 120px ;
+    margin : 15px ;
+    padding : 15px ;}
 
-.same li a {
-    color : black ;
-    display : block ;
-    text-decoration: none ;
-    position : relative ;
-    padding-left : 30 px ;
-    font-family :Segoe UI ;
-    letter-spacing : 2px ;
-    font-size : 14 px ;}
- .same li a:hover {
-        background: coral;
-        ;}
 .wlc {position : relative ;
 width : 100% ;
 margin : 0 auto ;}
@@ -74,7 +66,7 @@ height: 2px ;
 border : 0 none ;
 margin-right : auto;
 margin-left : auto;
-margin-top : 20px;
+margin-top : 5px;
 margin-bottom : 20 px; 
 background-color : rgb(209, 207, 207) ;}
 
@@ -85,7 +77,7 @@ background-color : rgb(209, 207, 207) ;}
 
 .word { color : white;
   position : absolute ;
-  top : 125% ;
+  top : 130% ;
   right :87.5% ;
   width : 10% ;
   text-align  : top  ;
@@ -96,7 +88,7 @@ background-color : rgb(209, 207, 207) ;}
 
   .wordd { color : white;
     position : absolute ;
-    top : 125% ;
+    top : 130% ;
     right :64.2% ;
     width : 10% ;
     text-align  : top  ;
@@ -107,7 +99,7 @@ background-color : rgb(209, 207, 207) ;}
 
     .worddd { color : white;
       position : absolute ;
-      top : 125% ;
+      top :130% ;
       right :41% ;
       width : 10% ;
       text-align  : top  ;
@@ -118,7 +110,7 @@ background-color : rgb(209, 207, 207) ;}
 
       .wordddd { color : white;
         position : absolute ;
-        top : 125% ;
+        top :130% ;
         right :17.7% ;
         width : 10% ;
         text-align  : top  ;
@@ -128,7 +120,7 @@ background-color : rgb(209, 207, 207) ;}
         }
 .word1 { color : white;
   position : absolute ;
-  top : 156% ;
+  top : 165% ;
   right :87.5% ;
   width : 10% ;
   text-align  : top  ;
@@ -138,7 +130,7 @@ background-color : rgb(209, 207, 207) ;}
   }
   .word2 { color : white;
     position : absolute ;
-    top : 156% ;
+    top :  165% ;
     right :64.2% ;
     width : 10% ;
     text-align  : top  ;
@@ -149,7 +141,7 @@ background-color : rgb(209, 207, 207) ;}
 
     .word3 { color : white;
       position : absolute ;
-      top : 156% ;
+      top : 165% ;
       right :41% ;
       width : 10% ;
       text-align  : top  ;
@@ -159,7 +151,7 @@ background-color : rgb(209, 207, 207) ;}
       }
       .word4 { color : white;
         position : absolute ;
-        top : 156% ;
+        top :  165% ;
         right :17.7% ;
         width : 10% ;
         text-align  : top  ;
@@ -174,4 +166,79 @@ background-color : rgb(209, 207, 207) ;}
 list-style : none ;
 margin-top : 30 px}
 
+.div { width : 20%;
+margin-left : 50px ;
+right :10px;}
+.div2 { margin-top:-450px;
+width: 20%;
+margin-left :380px;}
 
+
+.div3 { margin-top:-450px;
+  width: 20%;
+  margin-left :710px;}
+  .div4 { margin-top:-450px;
+    width: 20%;
+    margin-left :1040px;}
+  
+    
+.contact-section {
+padding :40px 0 ;}
+
+.contact-section h1 {
+  color : rgb(0, 0, 0)150, 144, 144);}
+ 
+.contact-from {
+max-width :600px;
+margin : 30px ;
+padding : . 90px ;
+overflow : hidden ;
+
+}
+
+  .contact-from-text :focus {
+    box-shadow : 30px 50px 10px 4px #34495e ;
+    
+    }
+    textarea.contact-from-text  {
+      
+      resize: none;
+      height : 120px ;
+      
+      }
+      .contact-from-btn {
+float: left ;
+margin-left: 50px;
+width: 10%;
+border: 0;
+background : #000000 ;
+color :#fff ;
+padding : 12px 50px ;
+cursor: pointer;
+transition: 0.5s;
+margin-top : 30px ;
+
+   
+        }
+        .contact-from-btn :hover {
+background: #2980b9;          
+          }
+   .t  { width : 10%;
+            margin-left : 50px ;
+            right :10px;
+    }
+   .x  { width : 10%;
+              margin-left : 50px ;
+              right :10px;
+              }
+   .w { width : 10%;
+                margin-left : 50px ;
+                right :10px;}
+    .y  { width : 10%;
+                  margin-left : 50px ;
+                  right :10px;}
+
+ .map { width : 100%;
+  margin-left : 80px ;
+  margin-top : 100px ;
+   right :50px;}
